# ComfyUI_M3D_photo_effects

./: .markdownlint.yaml  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  utils.py
.github/workflows/: publish.yaml
js/: main.js  svgcurve.js
nodes/: bleachbypass.py  rgbcurve.py
