[project]
name = "ComfyUI_M3D_photo_effects"
description = "A set of photo effects for ComfyUI, for the moment, only Bleach Bypass effect is provided, but more to come!"
version = "1.0.2"
license = { file = "LICENSE" }
dependencies = ["Pillow", "numpy"]

[project.urls]
Repository = "https://github.com/metal3d/ComfyUI_M3D_photo_effects"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "metal3d"
DisplayName = "M3D photo effects"
Icon = ""
